apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
    testCompile('org.mockito:mockito-junit-jupiter:2.23.4')
    testCompile('org.assertj:assertj-core:3.11.1')
}